Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <meta property="og:site_name" content="babyparty" />
 <meta property="og:title" content="Baron Cafe Open" />
 <meta property="og:description" content="2019년 06월 01일, Baron Cafe Open 했습니다~" />
-<meta property="og:image" content="img/1.jpg" />
-<meta property="og:image" content="img/2.jpg" />
+<meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402518-80297e80-809b-11e9-9f75-6816d096d827.jpg" />
+<meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402578-a64f1e80-809b-11e9-95a4-6aa07afb8590.jpg" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="github.io" />
+<meta property="og:url" content="fldbwls93.github.io" />
 
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
 <style>
@@ -190,9 +190,9 @@ body {
 		<div class="slide_wrap">
 			<div id="autoplay" style="display:none;">
 				<!-- //이미지 추가 -->
-				<img src="https://cloud.githubusercontent.com/assets/16554116/12774533/375b55dc-ca89-11e5-9829-e5984d1d2efa.jpg" class="img100" />
-				<img src="https://cloud.githubusercontent.com/assets/16554116/12774535/375cf090-ca89-11e5-8589-c69d0f62defb.jpg" class="img100" />
-				<img src="https://cloud.githubusercontent.com/assets/16554116/12774534/375c0694-ca89-11e5-8af1-88a7179c3ec1.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/58402518-80297e80-809b-11e9-9f75-6816d096d827.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/58402578-a64f1e80-809b-11e9-95a4-6aa07afb8590.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/58402602-ba931b80-809b-11e9-924c-0ede039bf7f8.jpg" class="img100" />
 			</div>
 		</div>
 		<div class="content_wrap">
