--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 <meta property="og:site_name" content="babyparty" />
 <meta property="og:title" content="Baron Cafe Open" />
-<meta property="og:description" content="2019년 06월 01일, Baron Cafe Open 했습니다~" />
+<meta property="og:description" content="바론카페오픈,2019년 06월 01일 Baron Cafe Open했습니다~" />
+<meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58403541-e6170580-809d-11e9-92eb-17bb6f0acf0f.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402518-80297e80-809b-11e9-9f75-6816d096d827.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402578-a64f1e80-809b-11e9-95a4-6aa07afb8590.jpg" />
 <meta property="og:type" content="website" />
