--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
 
-<meta property="og:site_name" content="babyparty" />
+<meta property="og:site_name" content="cafe open invitation" />
 <meta property="og:title" content="Baron Cafe Open" />
-<meta property="og:description" content="바론카페오픈,2019년 06월 01일 Baron Cafe Open했습니다~" />
+<meta property="og:description" content="바론카페오픈_2019.06.01 Baron Cafe Open했습니다!!!많이놀러들오세요~" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58403541-e6170580-809d-11e9-92eb-17bb6f0acf0f.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402518-80297e80-809b-11e9-9f75-6816d096d827.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402578-a64f1e80-809b-11e9-95a4-6aa07afb8590.jpg" />
@@ -188,6 +188,9 @@ body {
 </head>
 <body>
 	<div id="wrap">
+        <div>
+            <img src="https://user-images.githubusercontent.com/51073406/58409834-e5856b80-80ab-11e9-8461-4975608df799.png" class="img100" />
+        </div>
 		<div class="slide_wrap">
 			<div id="autoplay" style="display:none;">
 				<!-- //이미지 추가 -->
@@ -205,15 +208,14 @@ body {
 			아무쪼록 오셔서 자리를 빛내 주셨으면 좋겠습니다.
 		</div>
 		<div class="contact_wrap">
-			<a href="tel:010-1234-5678" class="bg1"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/device-iPhone-smartphone-vertical-glyph-128.png" alt="tel">엄마전화</a>
-			<a href="tel:010-1234-5678" class="bg2"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/device-iPhone-smartphone-vertical-glyph-128.png" alt="tel">아빠전화</a>
+			<a href="tel:010-1234-5678" class="bg1"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/device-iPhone-smartphone-vertical-glyph-128.png" alt="tel">Baron_Cafe</a>
 			<a href="mailto:rmsidtest@gmail.com" class="bg3"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/common-email-envelope-mail-outline-stroke-128.png" alt="email" />이메일</a>
 		</div>
 		<div class="date_wrap">
-			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />오픈일시 : <strong>2019년 06월 01일</strong></span>
+			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />오픈일시 : <strong>2019년 06월 01일 토요일</strong></span>
 		</div>
 		<div class="addr_wrap">
-			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />초대장소 : <strong>Baron Cafe</strong> | 경기도 성남시 분당구 수내동21-1MS Plaza 10층</span>
+			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />초대장소 : <strong>Baron Cafe</strong> | 울산광역시 신정5동 </span>
 		</div>
 		<div class="map_wrap" id="map"></div>
 		<div class="tras_wrap">
@@ -223,8 +225,11 @@ body {
 			</div>
 		</div>
 		<div class="copy">
-			© Copyright 2016, 엄빠가
+			© Copyright 2019,BaronCafe
 		</div>
+		<div>
+            <img src="https://user-images.githubusercontent.com/51073406/58409834-e5856b80-80ab-11e9-8461-4975608df799.png" class="img100" />
+        </div>
 	</div>
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
