--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta property="og:site_name" content="cafe open invitation" />
 <meta property="og:title" content="Baron Cafe Open" />
-<meta property="og:description" content="바론카페오픈_2019.06.01 Baron Cafe Open했습니다!!!많이놀러들오세요~" />
+<meta property="og:description" content="바론카페오픈_2019.06.17 Baron Cafe Open했습니다!!!많이놀러들오세요~" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58403541-e6170580-809d-11e9-92eb-17bb6f0acf0f.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402518-80297e80-809b-11e9-9f75-6816d096d827.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402578-a64f1e80-809b-11e9-95a4-6aa07afb8590.jpg" />
@@ -90,7 +90,7 @@ body {
 }
 
 .contact_wrap a.bg1 {
-	background-color: #bbedc8;
+    border:solid 2px #000;
 }
 
 .contact_wrap a.bg2 {
@@ -98,7 +98,7 @@ body {
 }
 
 .contact_wrap a.bg3 {
-	background-color: #ccf2cb;
+    border:solid 2px #666;
 }
 
 .contact_wrap img {
@@ -189,46 +189,47 @@ body {
 <body>
 	<div id="wrap">
         <div>
-            <img src="https://user-images.githubusercontent.com/51073406/58409834-e5856b80-80ab-11e9-8461-4975608df799.png" class="img100" />
+            <img src="https://user-images.githubusercontent.com/51073406/59662850-bb295880-91e8-11e9-91b3-061a872d018e.jpg" class="img100" />
         </div>
 		<div class="slide_wrap">
 			<div id="autoplay" style="display:none;">
 				<!-- //이미지 추가 -->
-				<img src="https://user-images.githubusercontent.com/51073406/58402518-80297e80-809b-11e9-9f75-6816d096d827.jpg" class="img100" />
-				<img src="https://user-images.githubusercontent.com/51073406/58402578-a64f1e80-809b-11e9-95a4-6aa07afb8590.jpg" class="img100" />
-				<img src="https://user-images.githubusercontent.com/51073406/58402602-ba931b80-809b-11e9-924c-0ede039bf7f8.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/59666259-77861d00-91ef-11e9-913b-1817ae2682df.jpg" class="img100" />
+				<!--<img src="https://user-images.githubusercontent.com/51073406/59665907-c3849200-91ee-11e9-97a2-798cfce1e46c.jpg" class="img100" />-->
+				<img src="https://user-images.githubusercontent.com/51073406/59667705-20357c00-91f2-11e9-9a5c-bd19dbbfb69f.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/59667737-2a577a80-91f2-11e9-9e4b-472dc6462011.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/59667780-41966800-91f2-11e9-92e8-926aebe985be.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/59667803-4b1fd000-91f2-11e9-961d-da5324b57d14.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/59667819-5541ce80-91f2-11e9-88cd-a04b40b5a1b7.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/59667837-5f63cd00-91f2-11e9-8719-0f3e0fda3638.jpg" class="img100" />
 			</div>
 		</div>
 		<div class="content_wrap">
-			<h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />우리 아가의 돌잔치에 초대합니다<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" /></h1>
-			항상 저희를 아껴주시고, 응원해 주시는 분들께<br />
-			감사의 말씀을 드립니다.<br />
-			소중한 분들께 조금이나마 보답하고자,<br />
-			우리 아가의 첫번째 돌잔치에 초대장을 보내드립니다.<br />
-			아무쪼록 오셔서 자리를 빛내 주셨으면 좋겠습니다.
+            <h1>Cafe_baron Open했습니다.</h1>
+			반갑습니다. 울산 신상카페 바론카페입니다.<br/>
 		</div>
 		<div class="contact_wrap">
-			<a href="tel:010-1234-5678" class="bg1"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/device-iPhone-smartphone-vertical-glyph-128.png" alt="tel">Baron_Cafe</a>
-			<a href="mailto:rmsidtest@gmail.com" class="bg3"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/common-email-envelope-mail-outline-stroke-128.png" alt="email" />이메일</a>
+			<a href="tel:010-5339-4438" class="bg1"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/device-iPhone-smartphone-vertical-glyph-128.png" alt="tel">cafe_baron_</a>
+			<a href="https://www.instagram.com/cafe_baron_/?hl=ko" class="bg3"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/common-email-envelope-mail-outline-stroke-128.png" alt="email" />instagram</a>
 		</div>
 		<div class="date_wrap">
-			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />오픈일시 : <strong>2019년 06월 01일 토요일</strong></span>
+			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />오픈일시 : <strong>2019년 06월 17일 월요일</strong></span>
 		</div>
 		<div class="addr_wrap">
-			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />초대장소 : <strong>Baron Cafe</strong> | 울산광역시 신정5동 </span>
+			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />초대장소 : <strong>Baron Cafe</strong> | 울산시 남구 수암로 53번길4-1 </span>
 		</div>
 		<div class="map_wrap" id="map"></div>
 		<div class="tras_wrap">
 			<div>
 				<div class="what"><img src="https://cdn2.iconfinder.com/data/icons/vehicles-7/24/vehicles-12-128.png" alt="metro" />버스</div>
-				<div class="is">2, 52, 220, 1303, 115, 52, 15, 17, 33, 52, 55-1, 250, 300, 380, 390, 520, 730, 5200, 5400</div>
+				<div class="is">일반 106, 126, 206, 216, 226, 235, 266, 426 <span>동서오거리</span>도보2분</div>
 			</div>
 		</div>
 		<div class="copy">
 			© Copyright 2019,BaronCafe
 		</div>
 		<div>
-            <img src="https://user-images.githubusercontent.com/51073406/58409834-e5856b80-80ab-11e9-8461-4975608df799.png" class="img100" />
+            <img src="https://user-images.githubusercontent.com/51073406/58456164-6b61ef00-815e-11e9-8830-0ce09da7cfff.jpg" class="img100" />
         </div>
 	</div>
 	
