--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta property="og:site_name" content="cafe open invitation" />
 <meta property="og:title" content="Baron Cafe Open" />
-<meta property="og:description" content="바론카페오픈_2019.06.17 Baron Cafe Open했습니다!!!많이놀러들오세요~" />
+<meta property="og:description" content="울산 신상 카페 Baron Cafe OPEN 했습니다!!!_2019.06.17 많이놀러들오세요~" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58403541-e6170580-809d-11e9-92eb-17bb6f0acf0f.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402518-80297e80-809b-11e9-9f75-6816d096d827.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402578-a64f1e80-809b-11e9-95a4-6aa07afb8590.jpg" />
@@ -58,14 +58,16 @@ body {
 	margin: 0 15px;
 	color: #8d968c;
 	line-height: 20px;
+    margin-top:25px;
+    margin-bottom:15px;
 }
 
 .content_wrap h1 {
-	font-size: 15px;
+	font-size: 24px;
 	font-weight: bold;
 	text-align: center;
 	padding-bottom: 15px;
-	color: #50a27f;
+	color: #006600;
 }
 
 .content_wrap h1 img {
@@ -90,7 +92,11 @@ body {
 }
 
 .contact_wrap a.bg1 {
-    border:solid 2px #000;
+    height:25px;
+    line-height: 25px;
+    width:110px;
+    background: #999;
+    color:#fff;
 }
 
 .contact_wrap a.bg2 {
@@ -98,11 +104,12 @@ body {
 }
 
 .contact_wrap a.bg3 {
-    border:solid 2px #666;
+    height:23px;
+    border:solid 2px #006600;
 }
 
 .contact_wrap img {
-	height: 15px;
+	height: 20px;
 	padding-right: 5px;
 	vertical-align: middle;
 	position: relative;
@@ -205,12 +212,14 @@ body {
 			</div>
 		</div>
 		<div class="content_wrap">
-            <h1>Cafe_baron Open했습니다.</h1>
-			반갑습니다. 울산 신상카페 바론카페입니다.<br/>
+            <h1>Cafe_baron OPEN 했습니다.</h1>
+			반갑습니다. 울산 신상 카페 바론카페 입니다.<br/>
+			카페 오픈 기념으로 현재 이벤트를 진행중이오니<br/>
+			맛있는 커피한잔 즐기러 다들오세요~
 		</div>
 		<div class="contact_wrap">
-			<a href="tel:010-5339-4438" class="bg1"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/device-iPhone-smartphone-vertical-glyph-128.png" alt="tel">cafe_baron_</a>
-			<a href="https://www.instagram.com/cafe_baron_/?hl=ko" class="bg3"><img src="https://cdn4.iconfinder.com/data/icons/miu/24/common-email-envelope-mail-outline-stroke-128.png" alt="email" />instagram</a>
+			<a href="tel:010-5339-4438" class="bg1">BARON TEL</a>
+			<a href="https://www.instagram.com/cafe_baron_/?hl=ko" class="bg3"><img src="https://user-images.githubusercontent.com/51073406/59673902-136a5580-91fd-11e9-984c-23592d4a8542.png" alt="instagram" />cafe_baron_</a>
 		</div>
 		<div class="date_wrap">
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />오픈일시 : <strong>2019년 06월 17일 월요일</strong></span>
