--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
 }
 
 .content_wrap h1 {
-	font-size: 24px;
+	font-size: 26px;
 	font-weight: bold;
 	text-align: center;
 	padding-bottom: 15px;
@@ -104,7 +104,7 @@ body {
 }
 
 .contact_wrap a.bg3 {
-    height:23px;
+    height:22px;
     border:solid 2px #006600;
 }
 
@@ -171,7 +171,7 @@ body {
 .tras_wrap div.is {
 	color: #8d968c;
 	font-weight: bold;
-	margin: 0 20px;
+	font-size: 13px;
 }
 
 .tras_wrap img {
@@ -212,7 +212,7 @@ body {
 			</div>
 		</div>
 		<div class="content_wrap">
-            <h1>Cafe_baron OPEN 했습니다.</h1>
+            <h1 style="letter-spacing:5px;">Cafe_Baron OPEN</h1>
 			반갑습니다. 울산 신상 카페 바론카페 입니다.<br/>
 			카페 오픈 기념으로 현재 이벤트를 진행중이오니<br/>
 			맛있는 커피한잔 즐기러 다들오세요~
@@ -222,16 +222,16 @@ body {
 			<a href="https://www.instagram.com/cafe_baron_/?hl=ko" class="bg3"><img src="https://user-images.githubusercontent.com/51073406/59673902-136a5580-91fd-11e9-984c-23592d4a8542.png" alt="instagram" />cafe_baron_</a>
 		</div>
 		<div class="date_wrap">
-			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />오픈일시 : <strong>2019년 06월 17일 월요일</strong></span>
+            <span><strong style="color:#006600;">오픈일시</strong> : <strong>2019.06.29 MON</strong></span>
 		</div>
 		<div class="addr_wrap">
-			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />초대장소 : <strong>Baron Cafe</strong> | 울산시 남구 수암로 53번길4-1 </span>
+            <span><strong style="color:#006600;">오시는길</strong> : <strong>Baron Cafe</strong> | 울산시 남구 수암로 53번길4-1 </span>
 		</div>
 		<div class="map_wrap" id="map"></div>
 		<div class="tras_wrap">
 			<div>
-				<div class="what"><img src="https://cdn2.iconfinder.com/data/icons/vehicles-7/24/vehicles-12-128.png" alt="metro" />버스</div>
-				<div class="is">일반 106, 126, 206, 216, 226, 235, 266, 426 <span>동서오거리</span>도보2분</div>
+				<div class="what" style="color:#006600; font-weight:bold; font-size:13px;">버스</div>
+				<div class="is">일반 106, 126, 206, 216, 226, 235, 266, 426<br/><span>동서오거리</span>도보2분</div>
 			</div>
 		</div>
 		<div class="copy">
@@ -246,7 +246,7 @@ body {
 	<script src="https://maps.googleapis.com/maps/api/js?signed_in=true"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
 	<script>
-	var latlng = "37.378100, 127.112298"; //구글맵에서 위치 검색 후, 맵을 클릭하면 나오는 하단의 좌표를 입력한다.
+	var latlng = "35.531682, 129.314250"; //구글맵에서 위치 검색 후, 맵을 클릭하면 나오는 하단의 좌표를 입력한다.
 
 	function initMap() {
 		if (latlng.length <= 0)
