--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
 
 <meta property="og:site_name" content="cafe open invitation" />
-<meta property="og:title" content="Baron Cafe Open" />
-<meta property="og:description" content="울산 신상 카페 Baron Cafe OPEN 했습니다!!!_2019.06.17 많이놀러들오세요~" />
+<meta property="og:title" content="Cafe Baron Open" />
+<meta property="og:description" content="울산 신상 카페 Cafe Baron OPEN 했습니다!!!_2019.06.24 많이놀러들오세요~" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58403541-e6170580-809d-11e9-92eb-17bb6f0acf0f.jpg" />
-<meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402518-80297e80-809b-11e9-9f75-6816d096d827.jpg" />
+<meta property="og:image" content="https://user-images.githubusercontent.com/51073406/59665907-c3849200-91ee-11e9-97a2-798cfce1e46c.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402578-a64f1e80-809b-11e9-95a4-6aa07afb8590.jpg" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="fldbwls93.github.io" />
+<meta property="og:url" content="fldbwls93.github.io/" />
 
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
 <style>
@@ -56,7 +56,7 @@ body {
 	text-align: center;
 	padding-top: 15px;
 	margin: 0 15px;
-	color: #8d968c;
+	color:#666;
 	line-height: 20px;
     margin-top:25px;
     margin-bottom:10px;
@@ -158,6 +158,7 @@ body {
 	margin: 0 15px;
 	font-size: 14px;
 	padding-bottom: 20px;
+    margin-bottom:20px;
 }
 
 .tras_wrap div {
@@ -202,7 +203,6 @@ body {
 			<div id="autoplay" style="display:none;">
 				<!-- //이미지 추가 -->
 				<img src="https://user-images.githubusercontent.com/51073406/59666259-77861d00-91ef-11e9-913b-1817ae2682df.jpg" class="img100" />
-				<!--<img src="https://user-images.githubusercontent.com/51073406/59665907-c3849200-91ee-11e9-97a2-798cfce1e46c.jpg" class="img100" />-->
 				<img src="https://user-images.githubusercontent.com/51073406/59667705-20357c00-91f2-11e9-9a5c-bd19dbbfb69f.jpg" class="img100" />
 				<img src="https://user-images.githubusercontent.com/51073406/59667737-2a577a80-91f2-11e9-9e4b-472dc6462011.jpg" class="img100" />
 				<img src="https://user-images.githubusercontent.com/51073406/59667780-41966800-91f2-11e9-92e8-926aebe985be.jpg" class="img100" />
@@ -213,7 +213,7 @@ body {
 		</div>
 		<div class="content_wrap">
             <h1 style="letter-spacing:5px;">Cafe_Baron OPEN</h1>
-			반갑습니다. 울산 신상 카페 바론카페 입니다.<br/>
+			반갑습니다. 울산 신상카페 바론 입니다.<br/>
 			카페 오픈 기념으로 현재 이벤트를 진행중이오니<br/>
 			맛있는 커피한잔 즐기러 다들오세요~
 		</div>
@@ -222,23 +222,23 @@ body {
 			<a href="https://www.instagram.com/cafe_baron_/?hl=ko" class="bg3"><img src="https://user-images.githubusercontent.com/51073406/59673902-136a5580-91fd-11e9-984c-23592d4a8542.png" alt="instagram" />cafe_baron_</a>
 		</div>
 		<div class="date_wrap">
-            <span><strong style="color:#006600;">오픈일시</strong> : <strong>2019.06.29 MON</strong></span>
+            <span><strong style="color:#006600;">오픈일시</strong> : <strong>2019.06.24 MON</strong></span>
 		</div>
 		<div class="addr_wrap">
-            <span><strong style="color:#006600;">오시는길</strong> : <strong>Baron Cafe</strong> | 울산시 남구 수암로 53번길4-1 </span>
+            <span><strong style="color:#006600;">오시는길</strong> : <strong>Cafe Baron</strong> | 울산시 남구 수암로 53번길4-1 </span>
 		</div>
 		<div class="map_wrap" id="map"></div>
 		<div class="tras_wrap">
 			<div>
 				<div class="what" style="color:#006600; font-weight:bold; font-size:13px;">버스</div>
-				<div class="is">일반 106, 126, 206, 216, 226, 235, 266, 426<br/><span>동서오거리</span>도보2분</div>
+				<div class="is">일반 106, 126, 206, 216, 226, 235, 266, 426<br/><span style="color:#336666; font-weight:bold;">동서오거리 도보2분</span></div>
 			</div>
 		</div>
-		<div class="copy">
+		<!--<div class="copy">
 			© Copyright 2019,BaronCafe
-		</div>
+		</div>-->
 		<div>
-            <img src="https://user-images.githubusercontent.com/51073406/58456164-6b61ef00-815e-11e9-8830-0ce09da7cfff.jpg" class="img100" />
+            <img src="https://user-images.githubusercontent.com/51073406/59732300-a7cbcb00-9284-11e9-9cb8-3665d1f6b46a.jpg" class="img100" />
         </div>
 	</div>
 	
