--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ body {
             <img src="https://user-images.githubusercontent.com/51073406/59662850-bb295880-91e8-11e9-91b3-061a872d018e.jpg" class="img100" />
         </div>
 		<div class="slide_wrap">
-			<div id="autoplay" style="display:none;">
+			<div id="autoplay" style="height:375px;display:none;">
 				<!-- //이미지 추가 -->
 				<img src="https://user-images.githubusercontent.com/51073406/59666259-77861d00-91ef-11e9-913b-1817ae2682df.jpg" class="img100" />
 				<img src="https://user-images.githubusercontent.com/51073406/59667705-20357c00-91f2-11e9-9a5c-bd19dbbfb69f.jpg" class="img100" />
