--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/59665907-c3849200-91ee-11e9-97a2-798cfce1e46c.jpg" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/51073406/58402578-a64f1e80-809b-11e9-95a4-6aa07afb8590.jpg" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="fldbwls93.github.io/" />
+<meta property="og:url" content="http://fldbwls93.github.io" />
 
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
 <style>
@@ -131,6 +131,12 @@ body {
 	padding-right: 5px;
 }
 
+.time_wrap {
+	margin: 0 15px;
+	padding: 10px 0 0 0;
+	text-align: left;
+	font-size: 13px;
+}
 .addr_wrap {
 	margin: 0 15px;
 	padding: 10px 0;
@@ -189,7 +195,7 @@ body {
 	padding-top:15px;
 	padding-bottom:15px;
 }
-.slick-prev,.slick-next {
+.slick-prev, .slick-next {
 	display:none !important;
 }
 </style>
@@ -200,9 +206,11 @@ body {
             <img src="https://user-images.githubusercontent.com/51073406/59662850-bb295880-91e8-11e9-91b3-061a872d018e.jpg" class="img100" />
         </div>
 		<div class="slide_wrap">
-			<div id="autoplay" style="height:375px;display:none;">
+			<div id="autoplay" style="display:none;">
 				<!-- //이미지 추가 -->
-				<img src="https://user-images.githubusercontent.com/51073406/59666259-77861d00-91ef-11e9-913b-1817ae2682df.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/59741173-29cbec00-92a5-11e9-9ab6-9a18ac718c74.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/51073406/59749345-cc8d6600-92b7-11e9-8d06-4c77df49c0f5.jpg" class="img100" />
+				<!--<img src="https://user-images.githubusercontent.com/51073406/59749257-ab2c7a00-92b7-11e9-8ffe-370fd12aa0a2.jpg" class="img100" />-->
 				<img src="https://user-images.githubusercontent.com/51073406/59667705-20357c00-91f2-11e9-9a5c-bd19dbbfb69f.jpg" class="img100" />
 				<img src="https://user-images.githubusercontent.com/51073406/59667737-2a577a80-91f2-11e9-9e4b-472dc6462011.jpg" class="img100" />
 				<img src="https://user-images.githubusercontent.com/51073406/59667780-41966800-91f2-11e9-92e8-926aebe985be.jpg" class="img100" />
@@ -212,17 +220,24 @@ body {
 			</div>
 		</div>
 		<div class="content_wrap">
-            <h1 style="letter-spacing:5px;">Cafe_Baron OPEN</h1>
+            <h1 style="letter-spacing:5px;">CAFE BARON OPEN</h1>
 			반갑습니다. 울산 신상카페 바론 입니다.<br/>
 			카페 오픈 기념으로 현재 이벤트를 진행중이오니<br/>
 			맛있는 커피한잔 즐기러 다들오세요~
 		</div>
+		<div style="margin-top:30px; margin-bottom:10px;">
+            <h1 style="font-size: 26px;font-weight: bold;text-align: center;padding-bottom: 15px;color: #006600;letter-spacing:5px;">BARON EVENT</h1>
+            <img src="https://user-images.githubusercontent.com/51073406/59752976-2b55de00-92be-11e9-86d6-85827f1bd1f1.jpg" class="img100" />
+        </div>
 		<div class="contact_wrap">
 			<a href="tel:010-5339-4438" class="bg1">BARON TEL</a>
 			<a href="https://www.instagram.com/cafe_baron_/?hl=ko" class="bg3"><img src="https://user-images.githubusercontent.com/51073406/59673902-136a5580-91fd-11e9-984c-23592d4a8542.png" alt="instagram" />cafe_baron_</a>
 		</div>
 		<div class="date_wrap">
             <span><strong style="color:#006600;">오픈일시</strong> : <strong>2019.06.24 MON</strong></span>
+		</div>
+		<div class="time_wrap">
+            <span><strong style="color:#006600;">영업시간</strong> : <strong>AM 11:00 - PM 11:00</strong></span>
 		</div>
 		<div class="addr_wrap">
             <span><strong style="color:#006600;">오시는길</strong> : <strong>Cafe Baron</strong> | 울산시 남구 수암로 53번길4-1 </span>
